[gd_scene load_steps=11 format=3 uid="uid://ch3h14g3uqmiy"]

[ext_resource type="FontFile" uid="uid://ing4mhn155jx" path="res://assets/dpcomic.ttf" id="1_nvtb0"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_piyy4"]
[ext_resource type="Texture2D" uid="uid://btpvn5lvpsqur" path="res://assets/BasicBackground.svg" id="2_gqe34"]
[ext_resource type="Texture2D" uid="uid://blmqdiyuvdql" path="res://assets/simple-lantern.svg" id="3_h63gu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mbq1t"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcmaa"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_st3r1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogmgq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Gradient" id="Gradient_6r2xh"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j12g7"]
gradient = SubResource("Gradient_6r2xh")
fill = 1
fill_from = Vector2(0.509174, 0.495413)
fill_to = Vector2(0.715596, 0.770642)

[node name="Main Menu" type="Control"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 4.0
offset_right = 3.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_piyy4")

[node name="TitleText" type="Label" parent="."]
z_index = 5
layout_mode = 0
offset_left = 445.0
offset_top = 198.0
offset_right = 1155.0
offset_bottom = 343.0
theme_override_fonts/font = ExtResource("1_nvtb0")
theme_override_font_sizes/font_size = 160
text = "Firefly Hero"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 627.0
offset_top = 475.0
offset_right = 942.0
offset_bottom = 756.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
z_index = 5
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.74902, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.74902, 1)
theme_override_fonts/font = ExtResource("1_nvtb0")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_mbq1t")
theme_override_styles/hover = SubResource("StyleBoxFlat_bcmaa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_st3r1")
theme_override_styles/focus = SubResource("StyleBoxFlat_ogmgq")
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
z_index = 5
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.74902, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.74902, 1)
theme_override_fonts/font = ExtResource("1_nvtb0")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_mbq1t")
theme_override_styles/hover = SubResource("StyleBoxFlat_bcmaa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_st3r1")
theme_override_styles/focus = SubResource("StyleBoxFlat_ogmgq")
text = "Controls"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
z_index = 5
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.74902, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.74902, 1)
theme_override_fonts/font = ExtResource("1_nvtb0")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_mbq1t")
theme_override_styles/hover = SubResource("StyleBoxFlat_bcmaa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_st3r1")
theme_override_styles/focus = SubResource("StyleBoxFlat_ogmgq")
text = "Credits"

[node name="LanternSelectLocs" type="Node2D" parent="."]
position = Vector2(-23, 0)
scale = Vector2(5, 5)

[node name="StartLoc" type="Marker2D" parent="LanternSelectLocs"]
position = Vector2(186, 92.6)

[node name="ControlsLoc" type="Marker2D" parent="LanternSelectLocs"]
position = Vector2(197, 111.6)

[node name="CreditsLoc" type="Marker2D" parent="LanternSelectLocs"]
position = Vector2(193.4, 131)

[node name="ButtonSelect" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(-71.9999, 57)
scale = Vector2(5, 5)
texture = ExtResource("3_h63gu")

[node name="BasicBackground" type="Sprite2D" parent="."]
position = Vector2(781, 968)
scale = Vector2(20.75, 18.8)
texture = ExtResource("2_gqe34")

[node name="TitleLight" type="PointLight2D" parent="."]
position = Vector2(785, 558)
scale = Vector2(13.9174, 13.5667)
texture = SubResource("GradientTexture2D_j12g7")
texture_scale = 1.95

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.548963, 0.548963, 0.548963, 1)

[connection signal="focus_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_mouse_entered"]
[connection signal="focus_entered" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_mouse_entered"]
